--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <base target="_blank">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
@@ -132,8 +133,8 @@
     <div class="description">
       <p>$0.00055 every 4 minutes.</p>
       <p>High paying Shortlinks, Daily bonus, Daily coupon, Offerwalls, PTC.</p>
-      <p>Low minimum payout to FaucetPay.</p>
-      <a href="#" class="button">Join now</a>
+      <p>$0.005 minimum payout to FaucetPay.</p>
+      <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" class="button">Join now</a>
     </div>
   </div>
   <div class="item">
@@ -148,10 +149,13 @@
   </div>
   <div class="item">
     <img src="image-placeholder.jpg" alt="Image Placeholder">
-    <h2>Title 3</h2>
+    <h2>Coinpayz</h2>
     <div class="description">
-      <p>Description for Link 3...</p>
-      <a href="#" class="button">Join now</a>
+      <p>$0.0005+ every 5 minutes.</p>
+      <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
+      <p>$0.2 minimum payout to FaucetPay, Payeer and Wallet.</p>
+
+     <a href="#" class="button">Join now</a>
     </div>
   </div>
   <div class="item">
