--- a/index.html
+++ b/index.html
@@ -144,20 +144,41 @@
       <p>$0.0005+ every 5 minutes.</p>
       <p>High paying Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
       <p>$0.2 minimum payout to FaucetPay, Payeer and Wallet.</p>
+      <a href="https://earnbitmoon.club/?ref=145452" class="button">Join now</a>
+    </div>
+  </div>
+  
+    <div class="item">
+    <img src="/file/adbtc.jpg" alt="Adbtc">
+    <h2>Adbtc</h2>
+    <div class="description">
+      <p>Highest paying bitcoin PTC.</p>
+      <p>100+ satoshi in 5 minutes.</p>
+      <p>500 satoshi minimum payout to Faucetpay.</p>
+      <a href="https://r.adbtc.top/7297" class="button">Join now</a>
+    </div>
+  </div>
+  
+    <div class="item">
+    <img src="image-placeholder.jpg" alt="Image Placeholder">
+    <h2>Title 4</h2>
+    <div class="description">
+      <p>Description for Link 4...</p>
       <a href="#" class="button">Join now</a>
     </div>
   </div>
+  
   <div class="item">
-    <img src="image-placeholder.jpg" alt="Image Placeholder">
+    <img src="/file/cp.webp" alt="Coinpayz">
     <h2>Coinpayz</h2>
     <div class="description">
       <p>$0.0005+ every 5 minutes.</p>
       <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
-      <p>$0.2 minimum payout to FaucetPay, Payeer and Wallet.</p>
-
+      <p>$0.05 minimum payout to FaucetPay, Payeer and Wallet.</p>
      <a href="#" class="button">Join now</a>
     </div>
   </div>
+  
   <div class="item">
     <img src="image-placeholder.jpg" alt="Image Placeholder">
     <h2>Title 4</h2>
