--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   </div>
   
   <div class="item">
-    <img src="/file/cp.webp" alt="Coinpayz">
+    <img src="/file/cp.jpg" alt="Coinpayz">
     <h2>Coinpayz</h2>
     <div class="description">
       <p>$0.0005+ every 5 minutes.</p>
