--- a/index.html
+++ b/index.html
@@ -160,11 +160,13 @@
   </div>
   
     <div class="item">
-    <img src="image-placeholder.jpg" alt="Image Placeholder">
-    <h2>Title 4</h2>
+    <img src="/file/cpu.jpg" alt="Coinpayu">
+    <h2>Coinpayu</h2>
     <div class="description">
-      <p>Description for Link 4...</p>
-      <a href="#" class="button">Join now</a>
+      <p>High paying bitcoin PTC.</p>
+      <p>Multiple coins to withdraw.</p>
+      <p>3000 satoshi minimum payout to Faucetpay.</p>
+      <a href="https://www.coinpayu.com/?r=tsaroz" class="button">Join now</a>
     </div>
   </div>
   
@@ -175,7 +177,7 @@
       <p>$0.0005+ every 5 minutes.</p>
       <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
       <p>$0.05 minimum payout to FaucetPay, Payeer and Wallet.</p>
-     <a href="#" class="button">Join now</a>
+     <a href="https://coinpayz.xyz/?r=155318" class="button">Join now</a>
     </div>
   </div>
   
