--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   </div>
   
   <div class="item">
-    <img src="image-placeholder.jpg" alt="Image Placeholder">
+    <img src="/file/ftop.png" alt="Feyorra">
     <h2>Feyorra.top</h2>
     <div class="description">
       <p>2+ satoshi every 4 minutes.</p>
