--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   </div>
   
     <div class="item">
-    <img src="/file/cpu.jpg" alt="Coinpayu">
+    <img src="/file/cpu.png" alt="Coinpayu">
     <h2>Coinpayu</h2>
     <div class="description">
       <p>High paying bitcoin PTC.</p>
@@ -171,7 +171,7 @@
   </div>
   
   <div class="item">
-    <img src="/file/cp.jpg" alt="Coinpayz">
+    <img src="/file/cp.png" alt="Coinpayz">
     <h2>Coinpayz</h2>
     <div class="description">
       <p>$0.0005+ every 5 minutes.</p>
