--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   </div>
   <div class="item">
     <img src="/file/ebm.gif" alt="Earnbitmoon">
-    <h2>Title 2</h2>
+    <h2>Earnbitmoon</h2>
     <div class="description">
       <p>$0.0005+ every 5 minutes.</p>
       <p>High paying Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
