--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
   }
 
   .top-bar {
-    background-color: #f39c12;
+    background-color: black;
     padding: 10px 0;
     text-align: center;
     color: white;
-    font-size: 24px;
+    font-size: 30px;
     position: relative;
   }
+  
 
   .top-bar::before {
     content: '';
@@ -32,6 +33,15 @@
     top: -10px;
     left: 50%;
     transform: translateX(-50%);
+  }
+  
+    .net-bar {
+    background-color: #f39c12;
+    padding: 10px 0;
+    text-align: center;
+    color: black;
+    font-size: 20px;
+    position: relative;
   }
 
   .container {
@@ -126,6 +136,9 @@
 <div class="top-bar">
   Top 12 Best Crypto Faucets
 </div>
+ <div class="net-bar">
+  All links opens in new tab
+</div> 
 <div class="container">
   <div class="item">
     <img src="/file/vie.png" alt="Viefaucet">
