--- a/index.html
+++ b/index.html
@@ -193,15 +193,15 @@
      <a href="https://coinpayz.xyz/?r=155318" class="button">Join now</a>
     </div>
   </div>
-  
+
   <div class="item">
-    <img src="/file/ftop.png" alt="Feyorra">
-    <h2>Feyorra.top</h2>
+    <img src="/file/cf.png" alt="Coinfola">
+    <h2>Coinpayz</h2>
     <div class="description">
-      <p>2+ satoshi every 4 minutes.</p>
-      <p>Shortlinks, No timer Faucet, Offerwalls, PTC.</p>
-      <p>25 satoshi minimum to FaucetPay.</p>
-      <a href="https://feyorra.top/?r=180567" class="button">Join now</a>
+      <p>5 satoshi every 10 minutes.</p>
+      <p>High paying Shortlinks, PTC, Offerwalls.</p>
+      <p>10 satoshi minimum payout to FaucetPay.</p>
+     <a href="https://coinfola.com/ref/tsaroz" class="button">Join now</a>
     </div>
   </div>
   <!-- Add more items as needed -->
