--- a/index.html
+++ b/index.html
@@ -194,9 +194,20 @@
     </div>
   </div>
 
+    <div class="item">
+    <img src="/file/ftop.png" alt="Feyorra.top">
+    <h2>Feyorra.top</h2>
+    <div class="description">
+      <p>2+ satoshi every 4 minutes.</p>
+      <p>No timer faucet, Offerwalls. Shortlinks, PTC.</p>
+      <p>25 satoshi minimum payout to FaucetPay.</p>
+     <a href="https://coinfola.com/ref/tsaroz" class="button">Join now</a>
+    </div>
+  </div>
+  
   <div class="item">
     <img src="/file/cf.png" alt="Coinfola">
-    <h2>Coinpayz</h2>
+    <h2>Coinfola</h2>
     <div class="description">
       <p>5 satoshi every 10 minutes.</p>
       <p>High paying Shortlinks, PTC, Offerwalls.</p>
