--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/x-icon" href="/file/ccz.ico">
   <base target="_blank">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -206,6 +207,17 @@
   </div>
   
   <div class="item">
+    <img src="/file/cgame.png" alt="Cryptogames">
+    <h2>Crypto Farms</h2>
+    <div class="description">
+      <p>$0.0006+ every 5 minutes.</p>
+      <p>Task, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.005 satoshi minimum payout to FaucetPay.</p>
+     <a href="  https://crypto-farms.site/?r=2213" class="button">Join now</a>
+    </div>
+  </div>
+  <!-- Add more items as needed -->
+    <div class="item">
     <img src="/file/cf.png" alt="Coinfola">
     <h2>Coinfola</h2>
     <div class="description">
@@ -215,7 +227,7 @@
      <a href="https://coinfola.com/ref/tsaroz" class="button">Join now</a>
     </div>
   </div>
-  <!-- Add more items as needed -->
+  
 </div>
 </body>
 </html>
