--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <p>2+ satoshi every 4 minutes.</p>
       <p>No timer faucet, Offerwalls. Shortlinks, PTC.</p>
       <p>25 satoshi minimum payout to FaucetPay.</p>
-     <a href="https://coinfola.com/ref/tsaroz" class="button">Join now</a>
+     <a href="https://feyorra.top/?r=180567" class="button">Join now</a>
     </div>
   </div>
   
