--- a/index.html
+++ b/index.html
@@ -228,6 +228,54 @@
     </div>
   </div>
   
+  <div class="top-bar">
+  Top 4 Exchanges
+</div>
+  <div class="container">
+  <div class="item">
+    <img src="/file/pio.png" alt="Pionex">
+    <h2>Pionex</h2>
+    <div class="description">
+      <p>Free trading bots.</p>
+      <p>Staking bonus.</p>
+      <p>Low fees.</p>
+      <a href="https://www.pionex.com/en/signUp?r=DJz5RsVS" class="button">Join now</a>
+    </div>
+  </div>
+  <div class="item">
+    <img src="/file/bnb.png" alt="Binance">
+    <h2>Binance</h2>
+    <div class="description">
+      <p>Most popular exchange.</p>
+      <p>Low trading and witdrawal fees.</p>
+      <p>Direct paymet from Faucets.</p>
+      <a href="https://www.binance.com/en/activity/referral-entry/CPA?ref=CPA_006HXMQGRP" class="button">Join now</a>
+    </div>
+  </div>
+  
+    <div class="item">
+    <img src="/file/coine.png" alt="Coinex">
+    <h2>Coinex</h2>
+    <div class="description">
+      <p>Multiple coins.</p>
+      <p>No withdrawal fees for coins like bch.</p>
+      <p>Direct paymet from Faucets.</p>
+      <a href="https://www.coinex.com/register?refer_code=rcgnx" class="button">Join now</a>
+    </div>
+  </div>
+  
+    <div class="item">
+    <img src="/file/kucoin.jpg" alt="Kucoin">
+    <h2>Kucoin</h2>
+    <div class="description">
+      <p>Popular Exchange.</p>
+      <p>Multiple coins support.</p>
+      <p>Low or free witdrawal fees.</p>
+      <a href="https://www.kucoin.com/r/rf/QBSCL41F" class="button">Join now</a>
+    </div>
+  </div>
+  </div>
+  
 </div>
 </body>
 </html>
