--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
      <a href="https://coinfola.com/ref/tsaroz" class="button">Join now</a>
     </div>
   </div>
+  </div>
   
   <div class="top-bar">
   Top 4 Exchanges
