--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <img src="/file/pio.png" alt="Pionex">
     <h2>Pionex</h2>
     <div class="description">
-      <p>Free trading bots.</p>
+      <p>Free trading bots like grid.</p>
       <p>Staking bonus.</p>
       <p>Low fees.</p>
       <a href="https://www.pionex.com/en/signUp?r=DJz5RsVS" class="button">Join now</a>
