--- a/index.html
+++ b/index.html
@@ -229,6 +229,54 @@
   </div>
   </div>
   
+    <div class="top-bar">
+  Top 4 Wallets
+</div>
+  <div class="container">
+  <div class="item">
+    <img src="/file/fpay.jpg" alt="Faucetpay">
+    <h2>FaucetPay</h2>
+    <div class="description">
+      <p>Most popular microwallet.</p>
+      <p>Almost all Faucet Pays to FaucetPay.</p>
+      <p>Low fees, PTC, Offerwalls.</p>
+      <a href="https://faucetpay.io/?r=2516" class="button">Join now</a>
+    </div>
+  </div>
+  <div class="item">
+    <img src="/file/cc.png" alt="Cwallet">
+    <h2>Cwallet</h2>
+    <div class="description">
+      <p>New and modern microwallet.</p>
+      <p>Supports 100+ coins.</p>
+      <p>Direct paymet from Faucets.</p>
+      <a href="https://cwallet.com" class="button">Join now</a>
+    </div>
+  </div>
+  
+    <div class="item">
+    <img src="/file/payeer.png" alt="Payeer">
+    <h2>Coinex</h2>
+    <div class="description">
+      <p>Russia based multicoins wallet.</p>
+      <p>Many faucet pays to Payeer.</p>
+      <p>Direct paymet from Faucets.</p>
+      <a href="https://payeer.com/019596306" class="button">Join now</a>
+    </div>
+  </div>
+  
+    <div class="item">
+    <img src="/file/coinomi.png" alt="coinomi">
+    <h2>Kucoin</h2>
+    <div class="description">
+      <p>100+ coins supported.</p>
+      <p>Non-custodian wallet.</p>
+      <p>Multiple device supported.</p>
+      <a href="www.coinomi.com" class="button">Join now</a>
+    </div>
+  </div>
+  </div>
+  
   <div class="top-bar">
   Top 4 Exchanges
 </div>
