--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
     background: linear-gradient(to bottom right, #f7eacf, #d9e8da);
   }
 
-  .top-bar {
-    background-color: black;
-    padding: 10px 0;
+  .tit-bar {
+background: linear-gradient(to bottom right, #2193b0, #6dd5ed);    padding: 10px 0;
     text-align: center;
-    color: white;
-    font-size: 30px;
+    color: orange;
+    font-size: 40px;
     position: relative;
   }
-  
 
-  .top-bar::before {
+
+  .tit-bar::before {
     content: '';
     position: absolute;
     width: 0;
@@ -34,6 +33,15 @@
     top: -10px;
     left: 50%;
     transform: translateX(-50%);
+  }
+  
+    .top-bar {
+    background-color: black;
+    padding: 10px 0;
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    position: relative;
   }
   
     .net-bar {
@@ -134,12 +142,15 @@
 <title>Best Crypto Faucet Lists</title>
 </head>
 <body>
-<div class="top-bar">
-  Top 8 Best Crypto Faucets
+<div class="tit-bar">
+  Best Crypto List
 </div>
  <div class="net-bar">
   All links opens in new tab
 </div> 
+  <div class="top-bar">
+  Top 8 Best Crypto Faucets
+</div>
 <div class="container">
   <div class="item">
     <img src="/file/vie.png" alt="Viefaucet">
@@ -256,7 +267,7 @@
   
     <div class="item">
     <img src="/file/payeer.png" alt="Payeer">
-    <h2>Coinex</h2>
+    <h2>Payeer</h2>
     <div class="description">
       <p>Russia based multicoins wallet.</p>
       <p>Many faucet pays to Payeer.</p>
@@ -267,7 +278,7 @@
   
     <div class="item">
     <img src="/file/coinomi.png" alt="coinomi">
-    <h2>Kucoin</h2>
+    <h2>Coinomi</h2>
     <div class="description">
       <p>100+ coins supported.</p>
       <p>Non-custodian wallet.</p>
