--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   }
 
   .tit-bar {
-background: linear-gradient(to bottom right, #2193b0, #6dd5ed);    padding: 10px 0;
+        background-color: black;
     text-align: center;
     color: orange;
     font-size: 40px;
+      font-weight: 900;
     position: relative;
   }
 
