--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   
     .top-bar {
     background-color: black;
-    padding: 10px 0;
+    padding: 10px;
     text-align: center;
     color: white;
     font-size: 30px;
