--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         background-color: black;
     text-align: center;
     color: orange;
-    font-size: 40px;
+    font-size: 50px;
       font-weight: 900;
+    padding: 10px;
     position: relative;
   }
 
@@ -38,7 +39,7 @@
   
     .top-bar {
     background-color: black;
-    padding: 10px;
+    padding: 10px 0;
     text-align: center;
     color: white;
     font-size: 30px;
