--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
   </div>
   <!-- Add more items as needed -->
     <div class="item">
-    <img src="/file/cf.png" alt="Coinfola">
-    <h2>Coinfola</h2>
+    <img src="/file/ban.png" alt="banfaucet">
+    <h2>Banfaucet</h2>
     <div class="description">
-      <p>5 satoshi every 10 minutes.</p>
-      <p>High paying Shortlinks, PTC, Offerwalls.</p>
-      <p>10 satoshi minimum payout to FaucetPay.</p>
-     <a href="https://coinfola.com/ref/tsaroz" class="button">Join now</a>
+      <p>$0.0008 every 5 minutes (limited time).</p>
+      <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.1 minimum payout to FaucetPay.</p>
+     <a href="https://banfaucet.com/?r=11036" class="button">Join now</a>
     </div>
   </div>
   </div>
