--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <div class="description">
       <p>$0.0008 every 5 minutes (limited time).</p>
       <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.1 minimum payout to FaucetPay.</p>
+      <p>$0.01 minimum payout.</p>
      <a href="https://banfaucet.com/?r=11036" class="button">Join now</a>
     </div>
   </div>
