--- a/index.html
+++ b/index.html
@@ -164,6 +164,18 @@
       <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" class="button">Join now</a>
     </div>
   </div>
+  
+      <div class="item">
+    <img src="/file/ban.png" alt="banfaucet">
+    <h2>Banfaucet</h2>
+    <div class="description">
+      <p>$0.0008 every 5 minutes.</p>
+      <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.01 minimum payout.</p>
+     <a href="https://banfaucet.com/?r=11036" class="button">Join now</a>
+    </div>
+  </div>
+  
   <div class="item">
     <img src="/file/ebm.gif" alt="Earnbitmoon">
     <h2>Earnbitmoon</h2>
@@ -230,17 +242,17 @@
     </div>
   </div>
   <!-- Add more items as needed -->
-    <div class="item">
+ <!--    <div class="item">
     <img src="/file/ban.png" alt="banfaucet">
     <h2>Banfaucet</h2>
     <div class="description">
-      <p>$0.0008 every 5 minutes (limited time).</p>
+      <p>$0.0008 every 5 minutes.</p>
       <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
       <p>$0.01 minimum payout.</p>
      <a href="https://banfaucet.com/?r=11036" class="button">Join now</a>
     </div>
   </div>
-
+-->
   
 
   
