--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
     </div>
   </div>
   
-  <div class="item">
-    <img src="/file/cgame.png" alt="Cryptogames">
-    <h2>Crypto Farms</h2>
+    <div class="item">
+    <img src="/file/cf.png" alt="Coinfola">
+    <h2>Coinfola</h2>
     <div class="description">
-      <p>$0.0006+ every 5 minutes.</p>
-      <p>Task, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.005 satoshi minimum payout to FaucetPay.</p>
-     <a href="  https://crypto-farms.site/?r=2213" class="button">Join now</a>
+      <p>5 satoshi every 10 minutes.</p>
+      <p>High paying Shortlinks, PTC, Offerwalls.</p>
+      <p>10 satoshi minimum payout to FaucetPay.</p>
+     <a href="https://coinfola.com/ref/tsaroz" class="button">Join now</a>
     </div>
   </div>
   <!-- Add more items as needed -->
