--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </head>
 <body>
 <div class="tit-bar">
-  Happy Krishna Janmastami
+<img src="/file/kri.avif">  Happy Krishna Janmastami!
 </div>
  <div class="net-bar">
   All links opens in new tab
