--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </head>
 <body>
 <div class="tit-bar">
-<img src="/file/kri.avif">  Happy Krishna Janmastami!
+<img src="/file/kri.avif" style="width:50px;height:60px;">  Happy Krishna Janmastami!
 </div>
  <div class="net-bar">
   All links opens in new tab
