--- a/index.html
+++ b/index.html
@@ -259,5 +259,8 @@
 
   
 </div>
+  
+  <center><a href="https://www.pionex.com/en/signUp?r=DJz5RsVS"><img src="/file/pio.png"></a></center>
+  
 </body>
 </html>
