--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
   
 </div>
   
-  <center><a href="https://www.pionex.com/en/signUp?r=DJz5RsVS"><img src="/file/pio.png"></a></center>
+  <center><a href="https://www.pionex.com/en/signUp?r=DJz5RsVS" style="width:200px;height:150px;><img src="/file/pio.png"></a></center>
   
 </body>
 </html>
