--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   <!-- Add more items as needed -->
  <!--    <div class="item">
     <img src="/file/ban.png" alt="banfaucet">
-    <h2>Banfaucet</h2>
+    <h2>Banfaucet</h2> 
     <div class="description">
       <p>$0.0008 every 5 minutes.</p>
       <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
@@ -260,7 +260,7 @@
   
 </div>
   
-  <center><a href="https://www.pionex.com/en/signUp?r=DJz5RsVS" style="width:150px;height:100px;"><img src="/file/pio.png"></a></center>
+  <center><a href="https://www.pionex.com/en/signUp?r=DJz5RsVS"><img src="/file/pio.png"  style="width:150px;height:100px;"></a></center>
   
 </body>
 </html>
