--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
   
 </div>
   
-  <center><a href="https://www.pionex.com/en/signUp?r=DJz5RsVS"><img src="/file/pio.png"  style="width:400px;height:200px;"></a></center>
+  <center><div>Join Pionex exchange to earn from grid trading.<a href="https://www.pionex.com/en/signUp?r=DJz5RsVS"><img src="/file/pio.png"  style="width:400px;height:200px;"></a></div></center>
   
 </body>
 </html>
