--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   All links opens in new tab
 </div> 
   <div class="top-bar">
-  Top 8 Best Crypto Faucets
+  Top 10 Best Crypto Faucets
 </div>
 <div class="container">
   <div class="item">
@@ -244,19 +244,27 @@
     </div>
   </div>
   <!-- Add more items as needed -->
- <!--    <div class="item">
-    <img src="/file/ban.png" alt="banfaucet">
-    <h2>Banfaucet</h2> 
+     <div class="item">
+    <img src="/file/xtra.png" alt="xtrabits">
+    <h2>Xtrabit</h2> 
     <div class="description">
-      <p>$0.0008 every 5 minutes.</p>
-      <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.0005 every 5 minutes.</p>
+      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
       <p>$0.01 minimum payout.</p>
-     <a href="https://banfaucet.com/?r=11036" class="button">Join now</a>
+     <a href="https://xtrabits.click/?r=17371" class="button">Join now</a>
     </div>
   </div>
--->
   
-
+     <div class="item">
+    <img src="/file/final.png" alt="dutchy">
+    <h2>Final Autoclaim</h2> 
+    <div class="description">
+      <p>30 minute token and coin faucet.</p>
+      <p>70+ coins, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.01 minimum payout.</p>
+     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="button">Join now</a>
+    </div>
+  </div>
   
 </div>
   
