--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
   
 </div>
   
-  <center><div>Join Pionex exchange to earn from grid trading.<a href="https://www.pionex.com/en/signUp?r=DJz5RsVS"><img src="/file/pio.png"  style="width:400px;height:200px;"></a></div></center>
+  <center><div><a href="https://www.pionex.com/en/signUp?r=DJz5RsVS"><img src="/file/pio.png"  style="width:500px;height:200px;"></a></div></center>
   
 </body>
 </html>
