--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     <div class="description">
       <p>30 minute token and coin faucet.</p>
       <p>70+ coins, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.01 minimum payout.</p>
+      <p>Multiple ways to withdraw.</p>
      <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="button">Join now</a>
     </div>
   </div>
