--- a/index.html
+++ b/index.html
@@ -283,19 +283,19 @@ Best crypto List!
   </div>
   
        <div class="item">
-    <img src="/file/coingax.png" alt="coingax">
-    <h2>Coingax</h2> 
+    <img src="/file/noko.png" alt="Noko Faucet">
+    <h2>Noko Faucet</h2> 
     <div class="description">
-      <p>2 satoshis every 5 min.</p>
-      <p>PTC, Offerwalls.</p>
-      <p>Minimum 50 sats to Faucetpay.</p>
-     <a href="https://coingax.com/?r=3494" class="button">Join now</a>
+      <p>$0.0004 (50 tokens) every 5 min.</p>
+      <p>Unique easy captcha. PTC, Offerwalls.</p>
+      <p>Minimum $0.005 to Faucetpay.</p>
+     <a href="https://nokofaucet.com/sign-up?ref=647b39a94be69292a479fa75" class="button">Join now</a>
     </div>
   </div>
   
 </div>
   
-  <center><div><a href="https://www.pionex.com/en/signUp?r=DJz5RsVS"><img src="/file/pio.png"  style="width:500px;height:200px;"></a></div></center>
+  <center><div><a href="https://www.pionex.com/en/signUp?r=DJz5RsVS"><img src="/file/pio.png"  style="width:100px;height:50px;"></a></div></center>
   
 </body>
 </html>
