--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </head>
 <body>
 <div class="tit-bar">
-Best crypto List!
+List Faucet
 </div>
  <div class="net-bar">
   All links opens in new tab
