--- a/index.html
+++ b/index.html
@@ -286,10 +286,21 @@ List Faucet
     <img src="/file/ooter.png" alt="Space Shooter">
     <h2>Space Shooter</h2> 
     <div class="description">
-      <p>$0.0008 every 10 min.</p>
+      <p>$0.0008 every 10 mins.</p>
       <p>Shortlinks, PTC, Offerwalls.</p>
       <p>Minimum $0.005 to Faucetpay.</p>
      <a href="https://spaceshooter.net/?r=28035" class="button">Join now</a>
+    </div>
+  </div>
+  
+         <div class="item">
+    <img src="/file/cearn.png" alt="Crypto Earns">
+    <h2>Space Shooter</h2> 
+    <div class="description">
+      <p>$0.0004 every 2 mins.</p>
+      <p>Shortlinks, PTC, Offerwalls.</p>
+      <p>No minimum to Faucetpay and Cwallet.</p>
+     <a href="https://cryptoearns.com/?r=41208" class="button">Join now</a>
     </div>
   </div>
   
