--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ List Faucet
   
          <div class="item">
     <img src="/file/cearn.png" alt="Crypto Earns">
-    <h2>Space Shooter</h2> 
+    <h2>Crypto Earns</h2> 
     <div class="description">
       <p>$0.0004 every 2 mins.</p>
       <p>Shortlinks, PTC, Offerwalls.</p>
