--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ List Faucet
   All links opens in new tab
 </div> 
   <div class="top-bar">
-  Top 12 Best Crypto Faucets
+  Best Crypto Faucets
 </div>
 <div class="container">
   <div class="item">
