--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ List Faucet
     <img src="/file/vie.png" alt="Viefaucet">
     <h2>Viefaucet</h2>
     <div class="description">
-      <p>$0.00055 every 4 minutes.</p>
+      <p>$0.00055 every 4 minutes. Easy captcha.</p>
       <p>High paying Shortlinks, Daily bonus, Daily coupon, Offerwalls, PTC.</p>
       <p>$0.005 minimum payout to FaucetPay.</p>
       <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" class="button">Join now</a>
@@ -171,7 +171,7 @@ List Faucet
     <img src="/file/ebm.gif" alt="Earnbitmoon">
     <h2>Earnbitmoon</h2>
     <div class="description">
-      <p>$0.0005+ every 5 minutes.</p>
+      <p>$0.0005+ every 5 minutes. Easy captcha.</p>
       <p>High paying Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
       <p>$0.2 minimum payout to FaucetPay, Payeer and Wallet.</p>
       <a href="https://earnbitmoon.club/?ref=145452" class="button">Join now</a>
@@ -182,7 +182,7 @@ List Faucet
     <img src="/file/cearn.png" alt="Crypto Earns">
     <h2>Crypto Earns</h2> 
     <div class="description">
-      <p>$0.0004 every 2 mins.</p>
+      <p>$0.0004 every 2 mins. Easy captcha.</p>
       <p>Shortlinks, PTC, Offerwalls.</p>
       <p>No minimum to Faucetpay and Cwallet.</p>
      <a href="https://cryptoearns.com/?r=41208" class="button">Join now</a>
@@ -193,7 +193,7 @@ List Faucet
     <img src="/file/cp.png" alt="Coinpayz">
     <h2>Coinpayz</h2>
     <div class="description">
-      <p>$0.0005+ every 5 minutes.</p>
+      <p>$0.0005+ every 5 minutes. Easy captcha.</p>
       <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
       <p>$0.05 minimum payout to FaucetPay, Payeer and Wallet.</p>
      <a href="https://coinpayz.xyz/?r=155318" class="button">Join now</a>
