--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@ List Faucet
   <div class="top-bar">
   Best Crypto Faucets
 </div>
+   <div class="net-bar">
+  Today's coupon code 29th September 2023
+     Viefaucet: 965D737B75
+     Cryptoearns: 
+     Banfaucet: GGFCHUUQA
+</div> 
 <div class="container">
   <div class="item">
     <img src="/file/vie.png" alt="Viefaucet">
