--- a/index.html
+++ b/index.html
@@ -2,20 +2,16 @@
 <html lang="en">
 <head>
   
+
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-RDJT4D2JLN"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6MNBV9PH2F"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-RDJT4D2JLN');
+  gtag('config', 'G-6MNBV9PH2F');
 </script>
-
-    <link rel="icon" type="image/x-icon" href="/file/ccz.ico">
-  <base target="_blank">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -23,6 +19,12 @@
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "j2i6490yn9");
 </script>
+
+    <link rel="icon" type="image/x-icon" href="/file/ccz.ico">
+  <base target="_blank">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
   body {
     font-family: Arial, sans-serif;
