--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ List Faucet
   Today's coupon code 29th September 2023
      Viefaucet: 965D737B75
      Cryptoearns: AX45SA65
-     Banfaucet: GGFCHUUQA
+     Banfaucet: IL89SBEGZ
 </div> 
 <div class="container">
   <div class="item">
