--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ List Faucet
   Best Crypto Faucets
 </div>
    <div class="net-bar">
-  Today's coupon code 29th September 2023
-     Viefaucet: 965D737B75
+  Today's coupon code 30th September, 2023
+     Viefaucet: FB5CCFB6FD
      Cryptoearns: AX45SA65
      Banfaucet: IL89SBEGZ
 </div> 
