--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
     <link rel="icon" type="image/x-icon" href="/file/ccz.ico">
   <base target="_blank">
-<meta charset="UTF-8">
+<meta name="title" content="Best crypto faucets list">
+<meta name="description" content="Highest paying and trusted crypto faucet sites. Get paid in bitcoin, Pepe, Dogecoin, Ethereum, Solana, Litecoin, Tron and many more currencies.">
+<meta name="keywords" content="best, free, crypto, faucet, earn, coins, bitcoin, pepe, solana, ethereum, dogecoin, shiba, inu, altcoins">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
