--- a/index.html
+++ b/index.html
@@ -260,6 +260,18 @@ List Faucet
   
   
     <div class="item">
+    <img src="/file/earnbtc.png" alt="Earnbtc">
+    <h2>Earnbtc</h2>
+    <div class="description">
+      <p>$0.00045 every 5 minutes.</p>
+      <p>Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.1 minimum payout to FaucetPay.</p>
+     <a href="https://earnbtc.pw/?r=16382" class="button">Join now</a>
+    </div>
+  </div>
+  <!-- Add more items as needed -->
+  
+      <div class="item">
     <img src="/file/cf.png" alt="Coinfola">
     <h2>Coinfola</h2>
     <div class="description">
@@ -269,9 +281,6 @@ List Faucet
      <a href="https://coinfola.com/ref/tsaroz" class="button">Join now</a>
     </div>
   </div>
-  <!-- Add more items as needed -->
-  
-  
   
      <div class="item">
     <img src="/file/xtra.png" alt="xtrabits">
@@ -306,6 +315,16 @@ List Faucet
     </div>
   </div>
   
+    <div class="item">
+    <img src="/file/cgame.png" alt="Cryptogames">
+    <h2>Crypto Farms</h2>
+    <div class="description">
+      <p>$0.0006+ every 5 minutes.</p>
+      <p>Task, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.005 satoshi minimum payout to FaucetPay.</p>
+     <a href="  https://crypto-farms.site/?r=2213" class="button">Join now</a>
+    </div>
+  </div>
 
   
 
