--- a/index.html
+++ b/index.html
@@ -311,18 +311,18 @@ List Faucet
       <p>$0.0006+ every 5 minutes.</p>
       <p>Task, Shortlinks, PTC, Offerwalls.</p>
       <p>$0.005 satoshi minimum payout to FaucetPay.</p>
-     <a href="  https://crypto-farms.site/?r=2213" class="button">Join now</a>
+     <a href="https://crypto-farms.site/?r=2213" class="button">Join now</a>
     </div>
   </div>
   
     <div class="item">
-    <img src="/file/cgame.png" alt="Cryptogames">
-    <h2>Crypto Farms</h2>
+    <img src="/file/ooter.png" alt="SpaceShooter">
+    <h2>Space Shooter</h2>
     <div class="description">
-      <p>$0.0006+ every 5 minutes.</p>
-      <p>Task, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.005 satoshi minimum payout to FaucetPay.</p>
-     <a href="  https://crypto-farms.site/?r=2213" class="button">Join now</a>
+      <p>$0.0008 every 10 minutes.</p>
+      <p>Task, Shortlinks, Quiz, PTC, Offerwalls.</p>
+      <p>$0.001 satoshi minimum payout to FaucetPay.</p>
+     <a href="https://spaceshooter.net/?r=28035" class="button">Join now</a>
     </div>
   </div>
 
