--- a/index.html
+++ b/index.html
@@ -258,6 +258,16 @@ List Faucet
     </div>
   </div>
   
+      <div class="item">
+    <img src="/file/1co.ico" alt="1xbitcoins">
+    <h2>1xbitcoins</h2>
+    <div class="description">
+      <p>Claim 5 faucets every 30 minutes.</p>
+      <p>Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.05 minimum payout to FaucetPay and Cwallet.</p>
+     <a href="https://1xbitcoins.com/?r=listfaucet" class="button">Join now</a>
+    </div>
+  </div>
   
     <div class="item">
     <img src="/file/earnbtc.png" alt="Earnbtc">
