--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
   
 
-<script async data-id="101428125" src="//static.getclicky.com/js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6MNBV9PH2F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6MNBV9PH2F');
+</script>
 
 
     <link rel="icon" type="image/x-icon" href="/file/ccz.ico">
