--- a/index.html
+++ b/index.html
@@ -210,7 +210,16 @@ List Faucet
     </div>
   </div>
   
- 
+       <div class="item">
+    <img src="/file/fs.png" alt="Faucetspeedbtc">
+    <h2>Faucet Speed BTC</h2>
+    <div class="description">
+      <p>$0.0006+ every 4 minutes. RecaptchaV3</p>
+      <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
+      <p>$0.05 minimum payout to FaucetPay and Binance.</p>
+     <a href="https://faucetspeedbtc.com/?r=11499" class="button">Join now</a>
+    </div>
+  </div>
   
     <div class="item">
     <img src="/file/ftop.png" alt="Feyorra.top">
@@ -244,7 +253,7 @@ List Faucet
       <a href="https://r.adbtc.top/7297" class="button">Join now</a>
     </div>
   </div>
-
+  
     <div class="item">
     <img src="/file/cp.png" alt="Coinpayz">
     <h2>Coinpayz</h2>
@@ -271,7 +280,7 @@ List Faucet
     <img src="/file/1co.ico" alt="1xbitcoins">
     <h2>1xbitcoins</h2>
     <div class="description">
-      <p>Claim 5 faucets every 30 minutes.</p>
+      <p>Claim 5 faucets every 45 minutes.</p>
       <p>Shortlinks, PTC, Offerwalls.</p>
       <p>$0.05 minimum payout to FaucetPay and Cwallet.</p>
      <a href="https://1xbitcoins.com/?r=listfaucet" class="button">Join now</a>
