--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ List Faucet
     <img src="/file/cf.png" alt="Coinfola">
     <h2>Coinfola</h2>
     <div class="description">
-      <p>5 satoshi every 15 minutes.</p>
+      <p>4-5 satoshi every 15 minutes.</p>
       <p>High paying Shortlinks, PTC, Offerwalls.</p>
       <p>10 satoshi minimum payout to FaucetPay.</p>
      <a href="https://coinfola.com/ref/tsaroz" class="button">Join now</a>
@@ -339,7 +339,7 @@ List Faucet
     <div class="description">
       <p>$0.0006+ every 5 minutes.</p>
       <p>Task, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.005 satoshi minimum payout to FaucetPay.</p>
+      <p>$0.005 minimum payout to FaucetPay.</p>
      <a href="https://crypto-farms.site/?r=2213" class="button">Join now</a>
     </div>
   </div>
@@ -350,12 +350,32 @@ List Faucet
     <div class="description">
       <p>$0.0008 every 10 minutes.</p>
       <p>Task, Shortlinks, Quiz, PTC, Offerwalls.</p>
-      <p>$0.001 satoshi minimum payout to FaucetPay.</p>
+      <p>$0.001 minimum payout to FaucetPay.</p>
      <a href="https://spaceshooter.net/?r=28035" class="button">Join now</a>
     </div>
   </div>
 
+      <div class="item">
+    <img src="/file/bad.ico" alt="Btcadspace">
+    <h2>Btcadspace</h2>
+    <div class="description">
+      <p>1 satoshi every 4 minutes.</p>
+      <p>PTC, Shortlinks and Offerwalls.</p>
+      <p>100 satoshi minimum payout to FaucetPay.</p>
+     <a href="https://btcadspace.com/ref/tsaroz" class="button">Join now</a>
+    </div>
+  </div>
   
+        <div class="item">
+    <img src="/file/fz.ico" alt="Faucetpayz">
+    <h2>Faucetpayz</h2>
+    <div class="description">
+      <p>1 satoshi every 4 minutes.</p>
+      <p>PTC, Shortlinks and Offerwalls.</p>
+      <p>100 satoshi minimum payout to FaucetPay.</p>
+     <a href="https://faucetpayz.com/ref/tsaroz" class="button">Join now</a>
+    </div>
+  </div>
 
   
 </div>
