--- a/index.html
+++ b/index.html
@@ -378,6 +378,16 @@ List Faucet
     </div>
   </div>
 
+          <div class="item">
+    <img src="/file/fl.png" alt="fly-crypto">
+    <h2>Fly-crypto/h2>
+    <div class="description">
+       <p>$0.0005 every 5 minutes.</p>
+      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.005 minimum payout.</p>
+     <a href="https://fly-crypto.com/?r=4013" class="button">Join now</a>
+    </div>
+  </div>
   
 </div>
   
