--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ List Faucet
       <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
       <p>$0.005 minimum payout.</p>
      <a href="https://fly-crypto.com/?r=4013" class="button">Join now</a>
-    </div>
+    </div></div>
   
 </div>
   
