--- a/index.html
+++ b/index.html
@@ -175,12 +175,23 @@ List Faucet
   Best Crypto Faucets
 </div>
 
+          <div class="item">
+    <img src="/file/ban.png" alt="banfaucet">
+    <h2>Banfaucet</h2>
+    <div class="description">
+      <p>$0.0005 every 1 minute.</p>
+      <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.1 minimum payout.</p>
+     <a href="https://banfaucet.com/?r=11036" class="button">Join now</a>
+    </div>
+  </div>
+  
 <div class="container">
   <div class="item">
     <img src="/file/vie.png" alt="Viefaucet">
     <h2>Viefaucet</h2>
     <div class="description">
-      <p>$0.00055 every 4 minutes. Easy captcha.</p>
+      <p>$0.0006 every 4 minutes. Easy captcha.</p>
       <p>High paying Shortlinks, Daily bonus, Daily coupon, Offerwalls, PTC.</p>
       <p>$0.005 minimum payout to FaucetPay and Cwallet.</p>
       <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" class="button">Join now</a>
@@ -278,16 +289,6 @@ List Faucet
     </div>
   </div>
   
-        <div class="item">
-    <img src="/file/ban.png" alt="banfaucet">
-    <h2>Banfaucet</h2>
-    <div class="description">
-      <p>$0.0005 every 5 minutes.</p>
-      <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.01 minimum payout.</p>
-     <a href="https://banfaucet.com/?r=11036" class="button">Join now</a>
-    </div>
-  </div>
   
       <div class="item">
     <img src="/file/1co.ico" alt="1xbitcoins">
