--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ List Faucet
     <div class="description">
       <p>$0.0005 every 1 minute.</p>
       <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.1 minimum payout.</p>
+      <p>$0.01 minimum payout. FaucetPay and Cwallet.</p>
      <a href="https://banfaucet.com/?r=11036" class="button">Join now</a>
     </div>
   </div>
