--- a/index.html
+++ b/index.html
@@ -393,6 +393,16 @@ List Faucet
      <a href="https://fly-crypto.com/?r=4013" class="button">Join now</a>
     </div></div>
   
+            <div class="item">
+    <img src="/file/cv.ico" alt="cryptovie">
+            <h2>Crypto Vie</h2>
+    <div class="description">
+       <p>$0.0006 every 5 minutes.</p>
+      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.01 minimum payout to FaucetPay.</p>
+     <a href="https://cryptoviefaucet.com/?r=1787" class="button">Join now</a>
+    </div></div>
+  
 </div>
   
   <center><div><iframe data-aa='2264080' src='//ad.a-ads.com/2264080?size=200x200' style='width:200px; height:200px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe></div></center>
