--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     }
   }
 </style>
-<title>Best Crypto Faucet Lists</title>
+<title>Top 20 Crypto Faucet Lists</title>
 </head>
 <body>
 <div class="tit-bar">
