--- a/index.html
+++ b/index.html
@@ -384,13 +384,13 @@ List Faucet
   </div>
 
           <div class="item">
-    <img src="/file/fl.png" alt="fly-crypto">
-            <h2>Fly-crypto</h2>
+    <img src="/file/bee.gif" alt="BEE Faucet">
+            <h2>Bee Faucet</h2>
     <div class="description">
        <p>$0.0005 every 5 minutes.</p>
-      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.005 minimum payout.</p>
-     <a href="https://fly-crypto.com/?r=4013" class="button">Join now</a>
+      <p>Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.1 minimum payout to FaucetPay.</p>
+     <a href="https://beefaucet.org/?r=3209" class="button">Join now</a>
     </div></div>
   
             <div class="item">
