--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ List Faucet
   All links opens in new tab
 </div> 
   <div class="top-bar">
-  Best Crypto Faucets
+  Top 20 Crypto Faucets
 </div>
 
 <div class="container">
