--- a/index.html
+++ b/index.html
@@ -328,13 +328,13 @@ List Faucet
   
   
      <div class="item">
-    <img src="/file/final.png" alt="dutchy">
-    <h2>Final Autoclaim</h2> 
+    <img src="/file/cad.png" alt="coinsward">
+    <h2>Coinsward Faucet</h2> 
     <div class="description">
-      <p>30 minute token and coin faucet.</p>
-      <p>70+ coins, Shortlinks, PTC, Offerwalls.</p>
-      <p>Multiple ways to withdraw.</p>
-     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="button">Join now</a>
+      <p>$0.0005 every 5 minutes.</p>
+      <p>Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.005 minimum payout to FaucetPay.</p>
+     <a href="https://coinsward.com/earn?ref=nRDA92jy4ac9" class="button">Join now</a>
     </div>
   </div>
   
