--- a/index.html
+++ b/index.html
@@ -331,9 +331,9 @@ List Faucet
     <img src="/file/cad.png" alt="coinsward">
     <h2>Coinsward Faucet</h2> 
     <div class="description">
-      <p>$0.0005 every 5 minutes.</p>
+      <p>$0.0005 every 5 minutes. Recaptcha.</p>
       <p>Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.5 minimum payout to FaucetPay.</p>
+      <p>$0.1 minimum payout to FaucetPay.</p>
      <a href="https://coinsward.com/earn?ref=nRDA92jy4ac9" class="button">Join now</a>
     </div>
   </div>
