--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@ List Faucet
   
   
       <div class="item">
-    <img src="/file/1co.ico" alt="1xbitcoins">
-    <h2>1xbitcoins</h2>
+    <img src="/file/bpd.png" alt="Bitupdate">
+    <h2>Bitupdate</h2>
     <div class="description">
-      <p>Claim 5 faucets every 5 minutes.</p>
+      <p>$0.0006 every 5 minutes.</p>
       <p>Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.05 minimum payout to FaucetPay and Cwallet.</p>
-     <a href="https://1xbitcoins.com/?r=listfaucet" class="button">Join now</a>
+      <p>$0.05 minimum payout to FaucetPay.</p>
+     <a href="https://bitupdate.info/?r=2753" class="button">Join now</a>
     </div>
   </div>
   
