--- a/index.html
+++ b/index.html
@@ -414,6 +414,11 @@ List Faucet
       
     <a href="https://robocoin.cc/?r=tsaroz" target="_blank"><img src="https://robocoin.cc/assets/img/pages/referral/promo/300x250.gif" alt="Cryptocurrency Mining Simulator RoboCoin.cc" /></a>
     </div>    
+  
+  <script src="//static.surfe.pro/js/net.js"></script>
+<ins class="surfe-be" data-sid="385863"></ins>
+<script>(adsurfebe = window.adsurfebe || []).push({});</script>
+  
     <div><iframe data-aa='2264080' src='//ad.a-ads.com/2264080?size=200x200' style='width:200px; height:200px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe></div></div>
   
 </body>
