--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ List Faucet
     <img src="/file/cv.ico" alt="cryptovie">
             <h2>Crypto Vie</h2>
     <div class="description">
-       <p>$0.0006 every 5 minutes.</p>
+       <p>$0.0007 every 4 minutes. Only 10 claims per day.</p>
       <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
       <p>$0.01 minimum payout to FaucetPay.</p>
      <a href="https://cryptoviefaucet.com/?r=1787" class="button">Join now</a>
