--- a/index.html
+++ b/index.html
@@ -224,16 +224,19 @@ List Faucet
     </div>
   </div>
   
-           <div class="item">
-    <img src="/file/cearn.png" alt="Crypto Earns">
-    <h2>Crypto Earns</h2> 
+            <div class="item">
+    <img src="/file/1co.ico" alt="1xbitcoins">
+    <h2>1xbitcoins</h2>
     <div class="description">
-      <p>$0.0004 every 3 mins. Easy captcha.</p>
+      <p>Claim 5 faucets every 5 minutes.</p>
+      <p>1 satoshi faucet with no timer.</p>
       <p>Shortlinks, PTC, Offerwalls.</p>
-      <p>No minimum to Faucetpay and Cwallet.</p>
-     <a href="https://cryptoearns.com/?r=41208" class="button">Join now</a>
+      <p>$0.05 minimum payout to FaucetPay and Cwallet.</p>
+     <a href="https://1xbitcoins.com/?r=listfaucet" class="button">Join now</a>
     </div>
   </div>
+  
+
   
 
   
@@ -283,6 +286,16 @@ List Faucet
     </div>
   </div>
   
+             <div class="item">
+    <img src="/file/cearn.png" alt="Crypto Earns">
+    <h2>Crypto Earns</h2> 
+    <div class="description">
+      <p>$0.0004 every 3 mins. Easy captcha.</p>
+      <p>Shortlinks, PTC, Offerwalls.</p>
+      <p>No minimum to Faucetpay and Cwallet.</p>
+     <a href="https://cryptoearns.com/?r=41208" class="button">Join now</a>
+    </div>
+  </div>
   
       <div class="item">
     <img src="/file/bpd.png" alt="Bitupdate">
@@ -386,16 +399,7 @@ List Faucet
     </div>
   </div>
 
-          <div class="item">
-    <img src="/file/bee.gif" alt="BEE Faucet">
-            <h2>Bee Faucet</h2>
-    <div class="description">
-       <p>$0.0005 every 5 minutes. RecaptchaV3</p>
-      <p>Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.1 minimum payout to FaucetPay.</p>
-     <a href="https://beefaucet.org/?r=3209" class="button">Join now</a>
-    </div></div>
-  
+    
             <div class="item">
     <img src="/file/cv.ico" alt="cryptovie">
             <h2>Crypto Vie</h2>
@@ -405,6 +409,8 @@ List Faucet
       <p>$0.01 minimum payout to FaucetPay.</p>
      <a href="https://cryptoviefaucet.com/?r=1787" class="button">Join now</a>
     </div></div>
+  
+
   
 
     <div>
