--- a/index.html
+++ b/index.html
@@ -405,13 +405,13 @@ List Faucet
 
     
             <div class="item">
-    <img src="/file/cv.ico" alt="cryptovie">
-            <h2>Crypto Vie</h2>
+    <img src="/file/ke.png" alt="KiddyEarner">
+            <h2>KiddyEarner</h2>
     <div class="description">
-       <p>$0.0007 every 4 minutes. Only 10 claims per day.</p>
-      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.01 minimum payout to FaucetPay.</p>
-     <a href="https://cryptoviefaucet.com/?r=1787" class="button">Join now</a>
+       <p>$0.0004 every 2 minutes.</p>
+      <p>Coupon, Shortlinks, PTC, Offerwalls.</p>
+      <p>No minimum payout to FaucetPay.</p>
+     <a href="https://kiddyearner.com/?r=8522" class="button">Join now</a>
     </div></div>
   
 
