--- a/index.html
+++ b/index.html
@@ -289,6 +289,16 @@ List Faucet
   </div>
   
   
+              <div class="item">
+    <img src="/file/cv.ico" alt="cryptovie">
+            <h2>Crypto Vie</h2>
+    <div class="description">
+       <p>$0.0007 every 4 minutes.</p>
+      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.01 minimum payout to FaucetPay.</p>
+     <a href="https://cryptoviefaucet.com/?r=1787" class="button">Join now</a>
+    </div></div>
+  
       <div class="item">
     <img src="/file/bpd.png" alt="Bitupdate">
     <h2>Bitupdate</h2>
@@ -336,7 +346,16 @@ List Faucet
   
 
   
-
+     <div class="item">
+    <img src="/file/cad.png" alt="coinsward">
+    <h2>Coinsward Faucet</h2> 
+    <div class="description">
+      <p>$0.0005 every 5 minutes. Recaptcha.</p>
+      <p>Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.2 minimum payout to FaucetPay.</p>
+     <a href="https://coinsward.com/earn?ref=nRDA92jy4ac9" class="button">Join now</a>
+    </div>
+  </div>
   
   <div class="item">
     <img src="/file/cgame.png" alt="Cryptogames">
