--- a/index.html
+++ b/index.html
@@ -211,6 +211,17 @@ List Faucet
   </div>
   
       <div class="item">
+    <img src="/file/oop.png" alt="Whoopy">
+    <h2>Whoopy Rewards</h2>
+    <div class="description">
+      <p>$0.0006 every 3 minutes.</p>
+      <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.05 minimum payout to FaucetPay.</p>
+     <a href="https://whoopyrewards.com/?r=6076" class="button">Join now</a>
+    </div>
+  </div>
+  
+      <div class="item">
     <img src="/file/cp.png" alt="Coinpayz">
     <h2>Coinpayz</h2>
     <div class="description">
