--- a/index.html
+++ b/index.html
@@ -232,16 +232,7 @@ List Faucet
     </div>
   </div>
   
-          <div class="item">
-    <img src="/file/ban.png" alt="banfaucet">
-    <h2>Banfaucet</h2>
-    <div class="description">
-      <p>$0.0005 every 1 minute.</p>
-      <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.01 minimum payout. FaucetPay and Cwallet.</p>
-     <a href="https://banfaucet.com/?r=11036" class="button">Join now</a>
-    </div>
-  </div>
+
   
   <div class="item">
     <img src="/file/ooter.png" alt="SpaceShooter">
@@ -290,7 +281,17 @@ List Faucet
   </div>
 
   
-           
+             <div class="item">
+    <img src="/file/ban.png" alt="banfaucet">
+    <h2>Banfaucet</h2>
+    <div class="description">
+      <p>$0.0005 every 5 minutes.</p>
+      <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.01 minimum payout. FaucetPay and Cwallet.</p>
+     <a href="https://banfaucet.com/?r=11036" class="button">Join now</a>
+    </div>
+  </div>
+  
             <div class="item">
     <img src="/file/1co.ico" alt="1xbitcoins">
     <h2>1xbitcoins</h2>
