--- a/index.html
+++ b/index.html
@@ -396,13 +396,13 @@ List Faucet
   </div>
   
         <div class="item">
-    <img src="/file/fz.ico" alt="Faucetpayz">
-    <h2>Faucetpayz</h2>
+    <img src="/file/flove.png" alt="Faucetlovin">
+    <h2>Faucet Lovin</h2>
     <div class="description">
       <p>1 satoshi every 5 minutes.</p>
       <p>PTC, Shortlinks and Offerwalls.</p>
-      <p>500 satoshi minimum payout to FaucetPay.</p>
-     <a href="https://faucetpayz.com/ref/tsaroz" class="button">Join now</a>
+      <p>1 satoshi minimum payout to FaucetPay.</p>
+     <a href="https://faucetlovin.com/ref/listfaucet.com" class="button">Join now</a>
     </div>
   </div>
 
