--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ List Faucet
     <img src="/file/cf.png" alt="Coinfola">
     <h2>Coinfola</h2>
     <div class="description">
-      <p>4 satoshi every 15 minutes.</p>
+      <p>High paying PTC. 2-3 sats every 10 mins.</p>
       <p>High paying Shortlinks, PTC, Offerwalls.</p>
       <p>10 satoshi minimum payout to FaucetPay.</p>
      <a href="https://coinfola.com/ref/tsaroz" class="button">Join now</a>
