--- a/index.html
+++ b/index.html
@@ -378,6 +378,17 @@ List Faucet
   </div>
   
        <div class="item">
+    <img src="/file/final.png" alt="dutchy">
+    <h2>Final Autoclaim</h2> 
+    <div class="description">
+      <p>30 minute token and coin faucet.</p>
+      <p>70+ coins, Shortlinks, PTC, Offerwalls.</p>
+      <p>Multiple ways to withdraw.</p>
+     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="button">Join now</a>
+    </div>
+  </div>
+  
+       <div class="item">
     <img src="/file/xtra.png" alt="xtrabits">
     <h2>Xtrabit</h2> 
     <div class="description">
