--- a/index.html
+++ b/index.html
@@ -377,6 +377,17 @@ List Faucet
     </div>
   </div>
   
+        <div class="item">
+    <img src="/file/bad.ico" alt="Btcadspace">
+    <h2>Btcadspace</h2>
+    <div class="description">
+      <p>1 satoshi every 4 minutes.</p>
+      <p>PTC, Shortlinks and Offerwalls.</p>
+      <p>100 satoshi minimum payout to FaucetPay.</p>
+     <a href="https://btcadspace.com/ref/tsaroz" class="button">Join now</a>
+    </div>
+  </div>
+  
        <div class="item">
     <img src="/file/xtra.png" alt="xtrabits">
     <h2>Xtrabit</h2> 
