--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ List Faucet
     <img src="/file/fs.png" alt="Faucetspeedbtc">
     <h2>Faucet Speed BTC</h2>
     <div class="description">
-      <p>$0.0006+ every 4 minutes. RecaptchaV3</p>
+      <p>$0.0007+ every 5 minutes. Turnstile.</p>
       <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
       <p>$0.05 minimum payout to FaucetPay and Binance.</p>
      <a href="https://faucetspeedbtc.com/?r=11499" class="button">Join now</a>
