--- a/index.html
+++ b/index.html
@@ -233,6 +233,17 @@ List Faucet
   </div>
   
   <div class="item">
+    <img src="/file/lita.png" alt="Litefaucet">
+    <h2>Litefaucet</h2>
+    <div class="description">
+      <p>$0.00055 every 5 minutes.</p>
+      <p>Task, Shortlinks, Quiz, PTC, Offerwalls.</p>
+      <p>$0.05 minimum payout to FaucetPay.</p>
+     <a href="https://litefaucet.in/?r=10979" class="button">Join now</a>
+    </div>
+  </div>
+  
+  <div class="item">
     <img src="/file/ebi.ico" alt="Earnfreebtc">
     <h2>Earn FreeBTC</h2>
     <div class="description">
@@ -242,8 +253,6 @@ List Faucet
      <a href="https://earnfreebtc.io/?r=7382" class="button">Join now</a>
     </div>
   </div>
-  
-
   
 
   
