--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ List Faucet
     <img src="/file/rfa.png" alt="Rfaucet">
     <h2>Rfaucet</h2> 
     <div class="description">
-      <p>$0.0005 every 4 mins. Shown as XRP but paid in multiple coins.</p>
+      <p>$0.0005 every 4 mins.</p>
       <p>Tasks, Shortlinks, PTC, Offerwalls.</p>
       <p>$0.015 minimum payout to faucetpay and cwallet.</p>
      <a href="https://rfaucet.com/?ref=IMzL" class="button">Join now</a>
