--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ List Faucet
     <div class="description">
       <p>$0.0005 every 5 minutes.</p>
       <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.01 minimum payout. Direct and Cwallet.</p>
+      <p>$0.05 minimum payout to Faucetpay. Direct and Cwallet.</p>
      <a href="https://banfaucet.com/?r=11036" class="button">Join now</a>
     </div>
   </div>
