--- a/index.html
+++ b/index.html
@@ -231,26 +231,36 @@ List Faucet
      <a href="https://feyorra.top/?r=180567" class="button">Join now</a>
     </div>
   </div>
-
-      <div class="item">
-    <img src="/file/lita.png" alt="Litefaucet">
-    <h2>Litefaucet</h2>
+  
+           <div class="item">
+    <img src="/file/fs.png" alt="Faucetspeedbtc">
+    <h2>Faucet Speed BTC</h2>
     <div class="description">
-      <p>$0.0005 every 5 minutes.</p>
-      <p>Task, Shortlinks, Quiz, PTC, Offerwalls.</p>
-      <p>$0.05 minimum payout to FaucetPay.</p>
-     <a href="https://litefaucet.in/?r=10979" class="button">Join now</a>
+      <p>$0.0007+ every 5 minutes. Turnstile.</p>
+      <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
+      <p>$0.05 minimum payout to FaucetPay and Binance.</p>
+     <a href="https://faucetspeedbtc.com/?r=11499" class="button">Join now</a>
     </div>
   </div>
-  
+
                 <div class="item">
-    <img src="/file/1co.ico" alt="1xbitcoins">
-    <h2>1xbitcoins</h2>
+    <img src="/file/cv.ico" alt="cryptovie">
+            <h2>Crypto Vie</h2>
     <div class="description">
-      <p>1 satoshi faucet with no timer.</p>
-      <p>Shortlinks, PTC, Offerwalls.</p>
-      <p>2000 satoshi payout to FaucetPay and Cwallet. Multiple coins option.</p>
-     <a href="https://1xbitcoins.com/?r=listfaucet" class="button">Join now</a>
+       <p>$0.0008 every 5 minutes. Only 5 claims.</p>
+      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.01 minimum payout to FaucetPay.</p>
+     <a href="https://cryptoviefaucet.com/?r=1787" class="button">Join now</a>
+    </div></div>
+
+        <div class="item">
+    <img src="/file/cp.png" alt="Coinpayz">
+    <h2>Coinpayz</h2>
+    <div class="description">
+      <p>$0.0005+ every 5 minutes. Easy captcha.</p>
+      <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
+      <p>$0.05 minimum payout to FaucetPay, Payeer and Wallet.</p>
+     <a href="https://coinpayz.xyz/?r=155318" class="button">Join now</a>
     </div>
   </div>
   
@@ -291,41 +301,6 @@ List Faucet
     </div>
   </div>
   
-  
-        <div class="item">
-    <img src="/file/cp.png" alt="Coinpayz">
-    <h2>Coinpayz</h2>
-    <div class="description">
-      <p>$0.0005+ every 5 minutes. Easy captcha.</p>
-      <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
-      <p>$0.05 minimum payout to FaucetPay, Payeer and Wallet.</p>
-     <a href="https://coinpayz.xyz/?r=155318" class="button">Join now</a>
-    </div>
-  </div>
-   
-
-  
-         <div class="item">
-    <img src="/file/fs.png" alt="Faucetspeedbtc">
-    <h2>Faucet Speed BTC</h2>
-    <div class="description">
-      <p>$0.0007+ every 5 minutes. Turnstile.</p>
-      <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
-      <p>$0.05 minimum payout to FaucetPay and Binance.</p>
-     <a href="https://faucetspeedbtc.com/?r=11499" class="button">Join now</a>
-    </div>
-  </div>
-
-                <div class="item">
-    <img src="/file/cv.ico" alt="cryptovie">
-            <h2>Crypto Vie</h2>
-    <div class="description">
-       <p>$0.0008 every 5 minutes. Only 5 claims.</p>
-      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.01 minimum payout to FaucetPay.</p>
-     <a href="https://cryptoviefaucet.com/?r=1787" class="button">Join now</a>
-    </div></div>
-  
   <div class="item">
     <img src="/file/cgame.png" alt="Cryptogames">
     <h2>Crypto Farms</h2>
@@ -338,7 +313,27 @@ List Faucet
   </div>
 
   
+        <div class="item">
+    <img src="/file/lita.png" alt="Litefaucet">
+    <h2>Litefaucet</h2>
+    <div class="description">
+      <p>$0.0005 every 5 minutes.</p>
+      <p>Task, Shortlinks, Quiz, PTC, Offerwalls.</p>
+      <p>$0.05 minimum payout to FaucetPay.</p>
+     <a href="https://litefaucet.in/?r=10979" class="button">Join now</a>
+    </div>
+  </div>
   
+     <div class="item">
+    <img src="/file/final.png" alt="dutchy">
+    <h2>Final Autoclaim</h2> 
+    <div class="description">
+      <p>30 minute token and coin faucet.</p>
+      <p>70+ coins, Shortlinks, PTC, Offerwalls.</p>
+      <p>Multiple ways to withdraw.</p>
+     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="button">Join now</a>
+    </div>
+  </div>
   
              <div class="item">
     <img src="/file/ban.png" alt="banfaucet">
