--- a/index.html
+++ b/index.html
@@ -415,10 +415,7 @@ List Faucet
   
 
     <div>
-      <!--Start rollercoin.com code-->
-<a href="https://rollercoin.com/?r=juwv6dm0">
-   <img src="https://static.rollercoin.com/static/img/ref/gen2/w250h250.gif"/> 
- </a> 
+<a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST"><img src="https://simplebits.io/banners/sb300x250.gif" width="300" height="250"></a>
 </div>
       
     
