--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ List Faucet
     <img src="/file/lita.png" alt="Litefaucet">
     <h2>Litefaucet</h2>
     <div class="description">
-      <p>$0.0005 every 5 minutes. Need to do 3 Shortlinks and 5 PTC to start using faucet.</p>
+      <p>$0.0005 every 5 minutes. Need to do 5 PTC to start using faucet.</p>
       <p>Task, Shortlinks, Quiz, PTC, Offerwalls.</p>
       <p>$0.05 minimum payout to FaucetPay.</p>
      <a href="https://litefaucet.in/?r=10979" class="button">Join now</a>
@@ -351,7 +351,7 @@ List Faucet
     <img src="/file/ban.png" alt="banfaucet">
     <h2>Banfaucet</h2>
     <div class="description">
-      <p>$0.0005 every 5 minutes.</p>
+      <p>$0.0005 every 4 minutes.</p>
       <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
       <p>$0.05 minimum payout to Faucetpay. Direct and Cwallet.</p>
      <a href="https://banfaucet.com/?r=11036" class="button">Join now</a>
