--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@ List Faucet
     <img src="/file/ftop.png" alt="Feyorra.top">
     <h2>Feyorra.top</h2>
     <div class="description">
-      <p>1 satoshi every 3 minutes.</p>
-      <p>No timer faucet, Offerwalls. Shortlinks, PTC.</p>
+      <p>0.86 satoshi every 3 minutes.</p>
+      <p>Offerwalls. Shortlinks, PTC.</p>
       <p>25 satoshi minimum payout to FaucetPay.</p>
      <a href="https://feyorra.top/?r=180567" class="button">Join now</a>
     </div>
