--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     </div>
   </div>
   
-<footer>
+<footer><center>
   <div>
     <a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST">
       <img src="https://simplebits.io/banners/sb300x250.gif" width="300" height="250" alt="SimpleBits Banner">
@@ -339,7 +339,7 @@
  
     <iframe data-aa='2298644' src='//ad.a-ads.com/2298644?size=300x250' style='width:300px; height:250px; border:0; padding:0; overflow:hidden; background-color: transparent;'></iframe>
   </div>
-  <p>Contact us: <a href="mailto:mail.listfaucet@gmail.com">mail.listfaucet@gmail.com</a></p>
+  <p>Contact us: <a href="mailto:mail.listfaucet@gmail.com">mail.listfaucet@gmail.com</a></p></center>
 </footer>
 </body>
 </html>
