--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             border-radius: 15px;
         }
         .header {
-            background: linear-gradient(to right, #ff9966, #ff5e62);
+            background: linear-gradient(to right, #202b01, #490103);
             font-family: 'Lobster', cursive;
             font-size: 2em;
-            color:#b90574
+            color:#fc31ae
         }
         .subheader {
             background: linear-gradient(to right, #56ab2f, #a8e063);
