--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
         <div class="faucet-header">
             Top 12 Best Faucets
         </div>
-        <div class="container">
+        <div class="card"><a href="https://t.me/hamster_Kombat_bot/start?startapp=kentId5861629159" target="_blank">🐹 Hamster Kombat - Play telegram game for Free and Earn real money! Hot now! 🐹</a></div>
+        <br><div class="container">
             <!-- Example card structure -->
             <div class="card">
                 <div class="card-header">
