--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Discover the top 10 best faucets offering high payouts and easy rewards. Explore now and start earning cryptocurrency today.">
-    <title>Top 12 Best Faucets</title>
+    <meta name="description" content="Discover the top 14 best faucets offering high payouts and easy rewards. Explore now and start earning cryptocurrency today.">
+    <title>Top 14 Best Faucets</title>
     <link rel="icon" type="image/x-icon" href="/file/ccz.ico">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -158,7 +158,7 @@
             All links open in new tab
         </div>
         <div class="faucet-header">
-            Top 12 Best Faucets
+            Top 14 Best Faucets
         </div>
         <div class="card"><a href="https://t.me/hamster_Kombat_bot/start?startapp=kentId5861629159" target="_blank">🐹 Hamster Kombat - Play telegram game for Free and Earn real money! Hot now! 🐹</a></div>
         <br><div class="container">
@@ -234,6 +234,31 @@
                     <li>$0.05 minimum payout to FaucetPay and Binance.</li>
                 </ul>
                 <button onclick="window.open('https://faucetspeedbtc.com/?r=11499', '_blank')">Visit Now</button>
+            </div>
+
+            <div class="card">
+                <div class="card-header">
+                    <img src="/file/dutchy.png" alt="Autofaucet logo">
+                    <h3>Dutchy Autofaucet</h3>
+                </div>
+                <ul>
+                    <li>Two 30 min faucet with boost feature.</li>
+                    <li>Autofaucet,Task, Shortlinks, PTC, Offerwalls.</li>
+                    <li>30+ coins, Low minimum payout to FaucetPay.</li>
+                </ul>
+                <button onclick="window.open('https://autofaucet.dutchycorp.space/?r=tsaroz', '_blank')">Visit Now</button>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="/file/csato.png" alt="Claimsatoshi logo">
+                    <h3>Claimsatoshi</h3>
+                </div>
+                <ul>
+                    <li>$0.0006 every 2.5 minutes.</li>
+                    <li>Task, Shortlinks, PTC, Offerwalls.</li>
+                    <li>$0.005 minimum payout to FaucetPay.</li>
+                </ul>
+                <button onclick="window.open('https://claimsatoshi.xyz/?r=101573', '_blank')">Visit Now</button>
             </div>
             <div class="card">
                 <div class="card-header">
