--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Listfaucet.com - Top Faucets and Telegram Games</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon"> <!-- Favicon for branding -->
+        <!-- Google Tag Manager -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-6MNBV9PH2F"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-6MNBV9PH2F');
+        </script>
 </head>
 <body>
     <header>
