--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
 
                 <article class="card">
                     <div class="card-header">
+                        <img src="images/csato.png" alt="Claimsatoshi image">
+                        <h2>Claimsatoshi</h2>
+                    </div>
+                    <div class="card-content">
+                    <li>$0.0006 every 2.5 minutes. Easy Captcha.</li>
+                    <li>Task, Shortlinks, PTC, Offerwalls.</li>
+                    <li>$0.005 minimum payout to FaucetPay and Cwallet.</li>
+                    </div>
+                    <a href="https://claimsatoshi.xyz/?r=101573" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
+                </article>
+
+                <article class="card">
+                    <div class="card-header">
                         <img src="images/ftop.png" alt="Feyyora image">
                         <h2>Feyyora.top</h2>
                     </div>
@@ -87,15 +100,28 @@
 
                 <article class="card">
                     <div class="card-header">
-                        <img src="images/csato.png" alt="Claimsatoshi image">
-                        <h2>Claimsatoshi</h2>
+                        <img src="images/freeltc.png" alt="Freeltc image">
+                        <h2>Freeltc Online</h2>
                     </div>
                     <div class="card-content">
-                    <li>$0.0006 every 2.5 minutes. Easy Captcha.</li>
-                    <li>Task, Shortlinks, PTC, Offerwalls.</li>
-                    <li>$0.005 minimum payout to FaucetPay and Cwallet.</li>
+                    <li>$0.007 every 3 mins. Easy Captcha.</li>
+                    <li>High paying shortlinks, PTC.</li>
+                    <li>$0.1 minimum payout to Faucetpay.</li>
                     </div>
-                    <a href="https://claimsatoshi.xyz/?r=101573" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
+                    <a href="https://freeltc.online/?r=11400" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
+                </article>
+
+                <article class="card">
+                    <div class="card-header">
+                        <img src="images/coinclaim.png" alt="Claimcoin image">
+                        <h2>Claimcoin.in</h2>
+                    </div>
+                    <div class="card-content">
+                    <li>$0.006 every 4 mins (Mad Faucet). Easy Captcha.</li>
+                    <li>Shortlinks, PTC.</li>
+                    <li>$0.01 minimum payout to Faucetpay.</li>
+                    </div>
+                    <a href="https://claimcoin.in/?r=45219" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
                 </article>
 
                 <article class="card">
@@ -122,6 +148,19 @@
                     <li>30+ coins, Low minimum payout to FaucetPay.</li>
                     </div>
                     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
+                </article>
+
+                <article class="card">
+                    <div class="card-header">
+                        <img src="images/ctrx.png" alt="Coinpayz image">
+                        <h2>Claimtrx</h2>
+                    </div>
+                    <div class="card-content">
+                    <li>$0.0005+ every 4 minutes. Easy Captcha.</li>
+                    <li>Shortlinks, PTC.</li>
+                    <li>$0.01 minimum payout to FaucetPay, Payeer and Wallet.</li>
+                    </div>
+                    <a href="https://claimtrx.com/?r=202861" class="card-button" target="_blank" rel="noopener noreferrer">Visit Now</a>
                 </article>
 
                 <article class="card">
